--- a/Spring/src/main/resources/application.properties
+++ b/Spring/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.flyway.locations=classpath:db/migration
 app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.mvc.hiddenmethod.filter.enabled=true
+logging.file.name=backend.log
+logging.pattern.file=%date{dd MMM yyyy - HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
